--- a/css/media_small_portrait.css
+++ b/css/media_small_portrait.css
@@ -21,6 +21,9 @@
     top: 8em;
     font-size: 1.5em;
   }
+  .main-container {
+    overflow-x: hidden;
+  }
   .about__title,
   .portfolio__title,
   .contact__title {
